[tool.poetry]
name = "computer-use"
version = "0.1.0"
description = "Testing Anthropic's computer use API"
authors = ["Yorick van Zweeden <git@yorickvanzweeden.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.37.1"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["scripts", "docs", "tests"]
warn_unused_ignores = false
disallow_any_generics = false

[tool.ruff]
exclude = ["scripts", "docs", "tests"]
target-version = "py310"
line-length = 120

# E: PEP8 (pycodestyle)
# F: PyFlakes (syntax errors)
# I: isort (import sorting)
# B: flake8-bugbear
# ARG: flake8-unused-arguments
# RUF200: invalid-pyproject-toml
# RET: flake8-return (checks return values)
# UP: pypgrade (automatically upgrade syntax for newer versions of the language)
# PGH: pygrep-hooks (regex-based checks)
select = ["E", "F", "I", "B", "ARG", "RUF200", "RET", "UP", "PGH"]
ignore = ["B008", "ARG004"]

[tool.black]
line-length = 120
fast = true